# llc4320-native-grid-preprocessing

./: .gitignore  pyproject.toml
notebooks/: exploratory_data_analysis_in_native_coordinates.ipynb  s3.ipynb
src/: __init__.py
src/data_ingestion/: get_raw_data.py
src/data_preprocessing/: halo_mask.py  physical_calculations.py  preproc_llc_core_data.py  spatial_patches.py  stats.py  weighted_coordinate_sampling.py
src/dataset_creation/: metadata.py  zarr_dataset.py
src/plotting/: llc_plotting.py
src/utils/: dask_download_xarray.py  jmd95_xgcm_implementation.py  native_gradient.py  physical_calculations.py  working_with_gradients_helpers.py
