[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dbof-in-native-grid"
version = "0.0.dev0"
description = "Fronts in the Ocean"
readme = "README.md"
license = { text = "BSD" }
authors = [
    { name = "J. Xavier Prochaska", email = "jxp@ucsc.edu" },
    { name = "P. Cornillon"},
    { name = "J. Tallman", email = "jttallman@ucdavis.deu" }
]
urls = { "Homepage" = "https://github.com/AI-for-Ocean-Science/" }
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "Reader",
    "aiohttp",
    "torch==2.8",
    "torchvision",
    "seaborn",
    "smart-open[s3]",
    "pyarrow",
    "scikit-learn",
    "scikit-image",
    "tqdm",
    "astropy",
    "astropy-healpix",
    "cftime",
    "bokeh",
    "umap-learn",
    "llvmlite",
    "boto3",
    "xarray==2025.10.1",
    "h5netcdf",
    "emcee",
    "corner",
    "importlib-metadata",
    "timm==0.3.2",
    "xmitgcm",
    "dask==2025.10.0",
    "s3fs==2025.9.0",
    "ujson",
    "zarr",
    "gsw",
    "cmocean",
    "xgcm",
    "seawater",
    "ecco_v4_py",
    "scikit-fmm"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]